# haskell-noughts-and-crosses

./: .gitignore  LICENSE  noughts-and-arrs.cabal  tic-tac-toe.cabal
src/: GLMain.hs  Main.hs
src/NAA/: AI.hs  Data.hs  Graphics.hs  Interface.hs  Logic.hs  Loop.hs  State.hs  Types.hs
src/NAA/Interface/: CLI.hs  GL.hs
test/: Main.hs
